Reestructuración de aplicación

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,9 +4,9 @@
       <img src="/assets/img/Logopequeno.png" alt="Logo del Club" style="height: 50px;">
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="!isLoggedIn()" (click)="irALogin()">Iniciar Sesión</ion-button>
-      <ion-button *ngIf="!isLoggedIn()" (click)="irARegistro()">Registrar</ion-button>
-      <ion-button *ngIf="isLoggedIn()" (click)="irAAdministracion()">Administración</ion-button>
+      <!--<ion-button *ngIf="!isLoggedIn()" (click)="irALogin()">Iniciar Sesión</ion-button>-->
+      <!--<ion-button *ngIf="!isLoggedIn()" (click)="irARegistro()">Registrar</ion-button>-->
+      <ion-button *ngIf="isLoggedIn()" (click)="irAAdministracion()">Admin</ion-button>
       <ion-button *ngIf="isLoggedIn()" (click)="logout()">Cerrar Sesión</ion-button>
     </ion-buttons>
   </ion-toolbar>
