--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,6 +24,7 @@
           </ion-item>
           <ion-button expand="full" type="submit">Iniciar Sesión</ion-button>
         </form>
+        <ion-button expand="full" (click)="irARegistro()">Registrarse</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
