--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,17 +1,15 @@
 /* Animaciones para los card */
-
 .clickable-card {
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   cursor: pointer;
-  will-change: transform, box-shadow;
 }
 
-.clickable-card:hover, .clickable-card:focus {
+.clickable-card:hover, .clickable-card:focus, .clickable-card:active {
   transform: scale(1.05);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
-/* Personalización de los card para la información de los partidos */
 
+/* Personalización de los card para la información de los partidos */
 ion-card {
   background: #20FFA3; 
   color: #000; 
