--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -1,43 +1,46 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Registro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <form (ngSubmit)="onRegister()">
-          <ion-item>
-            <ion-label position="floating">Nombre</ion-label>
-            <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Apellido Paterno</ion-label>
-            <ion-input [(ngModel)]="apellidoPaterno" name="apellidoPaterno" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Apellido Materno</ion-label>
-            <ion-input [(ngModel)]="apellidoMaterno" name="apellidoMaterno" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">RUT</ion-label>
-            <ion-input [(ngModel)]="rut" name="rut" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Contraseña</ion-label>
-            <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label>Equipo</ion-label>
-            <ion-select [(ngModel)]="equipo" name="equipo" required>
-              <ion-select-option *ngFor="let equipo of equipos" [value]="equipo.nombre">{{ equipo.nombre }}</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-button expand="full" type="submit">Registrarse</ion-button>
-        </form>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <form [formGroup]="registroForm" (ngSubmit)="onSubmit()">
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input formControlName="nombre"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="registroForm?.get('nombre')?.invalid && registroForm?.get('nombre')?.touched">
+      El nombre es requerido y debe tener entre 3 y 20 caracteres.
+    </ion-note>
+
+    <ion-item>
+      <ion-label position="floating">Apellido Paterno</ion-label>
+      <ion-input formControlName="apellidoPaterno"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="registroForm?.get('apellidoPaterno')?.invalid && registroForm?.get('apellidoPaterno')?.touched">
+      El apellido paterno es requerido y debe tener entre 3 y 20 caracteres.
+    </ion-note>
+
+    <ion-item>
+      <ion-label position="floating">Apellido Materno</ion-label>
+      <ion-input formControlName="apellidoMaterno"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="registroForm?.get('apellidoMaterno')?.invalid && registroForm?.get('apellidoMaterno')?.touched">
+      El apellido materno es requerido y debe tener entre 3 y 20 caracteres.
+    </ion-note>
+
+    <ion-item>
+      <ion-label position="floating">RUT</ion-label>
+      <ion-input formControlName="rut"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="registroForm?.get('rut')?.invalid && registroForm?.get('rut')?.touched">
+      El RUT es requerido y debe seguir el formato 'xxxxxxxx-x'.
+    </ion-note>
+
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="registroForm?.get('password')?.invalid && registroForm?.get('password')?.touched">
+      La contraseña es requerida y debe tener entre 4 y 20 caracteres, incluir una mayúscula y al menos un número.
+    </ion-note>
+
+    <ion-button expand="full" type="submit" [disabled]="registroForm.invalid">Registrarse</ion-button>
+  </form>
 </ion-content>
+
