--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,31 +1,36 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title>¡Bienvenid&#64; a la liga!</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12" class="ion-text-center">
-        <img src="assets/img/Logo.png" alt="Escudo del Equipo" class="escudo">
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <form (ngSubmit)="onLogin()">
-          <ion-item>
-            <ion-label position="floating">RUT</ion-label>
-            <ion-input [(ngModel)]="rut" name="rut" required></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="floating">Contraseña</ion-label>
-            <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
-          </ion-item>
-          <ion-button expand="full" type="submit">Iniciar Sesión</ion-button>
-        </form>
-        <ion-button expand="full" (click)="irARegistro()">Registrarse</ion-button>
+      <ion-col class="ion-text-center">
+        <img src="assets/img/Logo.png" alt="Escudo del Equipo">
       </ion-col>
     </ion-row>
   </ion-grid>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <ion-item>
+      <ion-label position="floating">RUT</ion-label>
+      <ion-input formControlName="rut"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="loginForm?.get('rut')?.invalid && loginForm?.get('rut')?.touched">
+      El RUT es requerido.
+    </ion-note>
+
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password" formControlName="password"></ion-input>
+    </ion-item>
+    <ion-note color="danger" *ngIf="loginForm?.get('password')?.invalid && loginForm?.get('password')?.touched">
+      La contraseña es requerida.
+    </ion-note>
+
+    <ion-button expand="full" type="submit" [disabled]="loginForm.invalid">Iniciar Sesión</ion-button>
+  </form>
+
+  <ion-button expand="full" (click)="irARegistro()">Registrarse</ion-button>
 </ion-content>
